* lisp/files.el (read-only-mode): New minor mode. (toggle-read-only): Use it and mark obsolete. (find-file--read-only): * lisp/vc/vc.el (vc-next-action, vc-checkout): * lisp/vc/vc-cvs.el (vc-cvs-checkout): * lisp/obsolete/vc-mcvs.el (vc-mcvs-update): * lisp/ffap.el (ffap--toggle-read-only): Update callers.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -588,6 +588,8 @@ are deprecated and will be removed eventually.
 
 * Lisp changes in Emacs 24.3
 
+** New minor mode `read-only-mode' to replace toggle-read-only (now obsolete).
+
 ** New functions `autoloadp' and `autoload-do-load'.
 
 ** New function `posnp' to test if an object is a `posn'.
