--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* simple.el (read-only-mode): Move from files.el for bootstrapping.
+	* files.el (read-only-mode): Move to simple.el.
+
 	* files.el (read-only-mode): New minor mode.
 	(toggle-read-only): Use it and mark obsolete.
 	(find-file--read-only):
