* lisp/progmodes/compile.el (compilation-always-kill): New var. (compilation-start): Use it.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -207,6 +207,8 @@ It copies the region-rectangle as the last rectangle kill.
 
 * Changes in Specialized Modes and Packages in Emacs 24.3
 
+** Compilation has a new `compilation-always-kill' configuration variable.
+
 ** Term changes
 
 The variables `term-default-fg-color' and `term-default-bg-color' are
