--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-30  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* progmodes/compile.el (compilation-always-kill): Doc fix.
+
 2012-08-30  Chong Yidong  <cyd@gnu.org>
 
 	* window.el (display-buffer-reuse-frames): Make the obsolescence
