--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-30  Kenichi Handa  <handa@gnu.org>
+
+	* qp.el (quoted-printable-decode-region): Decode multiple bytes at
+	once.
+
 2012-08-29  Julien Danjou  <julien@danjou.info>
 
 	* gnus-notifications.el: New file.
