--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* dispnew.c (update_frame_1): Pacify gcc -Wstrict-overflow
+	for GCC 4.7.1 x86-64.
+
 2012-08-30  Glenn Morris  <rgm@gnu.org>
 
 	* lread.c (init_lread): For out-of-tree builds, only add the
