--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-30  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* gtkutil.c (x_wm_set_size_hint): Use 1 col for base_width so it
+	does not become zero (Bug#12234).
+
 2012-08-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* dispnew.c (update_frame_1): Pacify gcc -Wstrict-overflow
