--- a/etc/NEWS
+++ b/etc/NEWS
@@ -165,6 +165,9 @@ The PCL-CVS commands are still available via the keyboard.
 
 * Editing Changes in Emacs 24.3
 
+** The `z' key no longer has a binding in most special modes.
+It used to kill the current buffer.
+
 ** New option `yank-handled-properties' allows processing of text
 properties on yanked text, in more ways that are more general than
 just removing them, as done by `yank-excluded-properties'.
