--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-31  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Remove unused member of struct x_output and struct w32_output.
+	* xterm.h (struct x_output): Remove unused field 'needs_exposure'.
+	* w32term.h (struct w32_output): Likewise.
+
 2012-08-30  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* gtkutil.c (x_wm_set_size_hint): Use 1 col for base_width so it
