--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Better seeds for (random).
+	* NEWS: Document new behavior of (random), (random "string").
+
 2012-08-28  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* charsets/MULE-ethiopic.map: Fix typo in comment.
