--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-01  Daniel Colascione  <dancol@dancol.org>
+
+	* w32fns.c (x_display_info_for_name): Prevent crash if w32 window
+	system used too early.
+
 2012-09-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Better seed support for (random).
