--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-09-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.ac (_FORTIFY_SOURCE): Define only when optimizing.
+	This ports to glibc 2.15 or later, when configured with
+	--enable-gcc-warnings.  See Eric Blake in
+	<http://lists.gnu.org/archive/html/bug-grep/2012-09/msg00000.html>.
+
 2012-09-01  Daniel Colascione  <dan.colascione@gmail.com>
 
 	* configure.ac: Introduce term_header variable, which holds the
