--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-02  Chong Yidong  <cyd@gnu.org>
+
+	* keymap.c (push_key_description): Print M-TAB as C-M-i
+	(Bug#11758).
+
 2012-09-02  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (CCL_H, W32FONT_H): New macros.
