Toggle whitespace matching mode with M-s SPC. http://lists.gnu.org/archive/html/emacs-devel/2012-09/msg00008.html
* lisp/isearch.el (search-whitespace-regexp): Doc fix.
Remove cons cell customization.
(isearch-mode-map): Bind "\M-s " to isearch-toggle-lax-whitespace.
(isearch-lax-whitespace, isearch-regexp-lax-whitespace):
New variables.
(isearch-forward, isearch-forward-regexp): Doc fix.
(isearch-toggle-lax-whitespace): New command.
(search-forward-lax-whitespace, search-backward-lax-whitespace)
(re-search-forward-lax-whitespace)
(re-search-backward-lax-whitespace): New functions.
(isearch-whitespace-regexp): Remove function.
(isearch-query-replace): Let-bind replace-search-function and
replace-re-search-function.
(isearch-occur): Let-bind search-spaces-regexp according to the
value of isearch-lax-whitespace and isearch-regexp-lax-whitespace.
(isearch-quote-char): Check isearch-regexp-lax-whitespace in the
condition for C-q SPC.
(isearch-search-fun-default): Use new functions mentioned above.
(isearch-search-forward, isearch-search-backward): Remove functions.
(isearch-search): Don't let-bind search-spaces-regexp.
(isearch-lazy-highlight-space-regexp): Remove variable.
(isearch-lazy-highlight-lax-whitespace)
(isearch-lazy-highlight-regexp-lax-whitespace): New variables.
(isearch-lazy-highlight-new-loop): Use them.
(isearch-lazy-highlight-search): Don't let-bind search-spaces-regexp.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -183,12 +183,14 @@ end of the buffer.  It defaults to t.
 and `M-s _' in Isearch toggles symbol search mode.
 `M-s c' in Isearch toggles search case-sensitivity.
 
-*** `search-whitespace-regexp' now acts on ordinary incremental search
-as well, so that each sequence of spaces in the search string matches
-any combination of one or more whitespace characters.  To change this
-behavior, you can give `search-whitespace-regexp' a cons cell value,
-where the car and cdr specify values for ordinary and regular
-expression incremental search respectively.
+*** `M-s SPC' in Isearch toggles whitespace matching mode
+in both ordinary and regexp incremental search, so that each
+sequence of spaces in the search string matches any combination
+of one or more whitespace characters defined by the variable
+`search-whitespace-regexp'.  In ordinary incremental search,
+`isearch-toggle-lax-whitespace' toggles the value of the variable
+`isearch-lax-whitespace'.  In regexp incremental search, it toggles
+the value of the variable `isearch-regexp-lax-whitespace'.
 
 ** M-x move-to-column, if called interactively with no prefix arg, now
 prompts for a column number.
